// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllUrlsFromDocsConfig > uploadcare > gets all urls from docs config 1`] = `
[
  "docs/introduction/intro",
  "docs/introduction/start/quickstart",
  "docs/introduction/security",
  "docs/introduction/billing",
  "docs/uploading/uploads",
  "docs/uploading/uploading-files",
  "docs/uploading/file-uploader/file-uploader",
  "docs/optimization/image-optimization",
  "docs/image-transformations/overview",
  "docs/delivery/overview",
  "docs/file-management/overview",
  "docs/integrations/all-integrations",
  "docs/integrations/api-clients/python",
  "api/upload-api/upload/base-upload",
  "api/upload-api/upload/multipart-file-upload-start",
  "api/upload-api/upload/multipart-file-upload-part",
  "api/upload-api/upload/multipart-file-upload-complete",
  "api/upload-api/upload/from-url-upload",
  "api/upload-api/upload/from-url-upload-status",
  "api/upload-api/upload/file-upload-info",
  "api/upload-api/groups/create-files-group",
  "api/upload-api/groups/files-group-info",
  "api/rest-api-v-0-7/file-metadata",
  "api/rest-api-v-0-7/file/files-list",
  "api/rest-api-v-0-7/file/store-file",
  "api/rest-api-v-0-7/file/delete-file-storage",
  "api/rest-api-v-0-7/file/info",
  "api/rest-api-v-0-7/file/files-storing",
  "api/rest-api-v-0-7/file/files-delete",
  "api/rest-api-v-0-7/file/create-local-copy",
  "api/rest-api-v-0-7/file/create-remote-copy",
  "api/rest-api-v-0-7/add-ons/aws-rekognition-execute",
  "api/rest-api-v-0-7/add-ons/aws-rekognition-execution-status",
  "api/rest-api-v-0-7/add-ons/aws-rekognition-detect-moderation-labels-execute",
  "api/rest-api-v-0-7/add-ons/aws-rekognition-detect-moderation-labels-execution-status",
  "api/rest-api-v-0-7/add-ons/uc-clamav-virus-scan-execute",
  "api/rest-api-v-0-7/add-ons/uc-clamav-virus-scan-execution-status",
  "api/rest-api-v-0-7/add-ons/remove-bg-execute",
  "api/rest-api-v-0-7/add-ons/remove-bg-execution-status",
  "api/rest-api-v-0-7/file-metadata/key",
  "api/rest-api-v-0-7/file-metadata/update-file-metadata-key",
  "api/rest-api-v-0-7/file-metadata/delete-file-metadata-key",
  "api/rest-api-v-0-7/group/groups-list",
  "api/rest-api-v-0-7/group/info",
  "api/rest-api-v-0-7/group/delete-group",
  "api/rest-api-v-0-7/project/info",
  "api/rest-api-v-0-7/webhook/webhooks-list",
  "api/rest-api-v-0-7/webhook/create",
  "api/rest-api-v-0-7/webhook/update-webhook",
  "api/rest-api-v-0-7/webhook/unsubscribe",
  "api/rest-api-v-0-7/conversion/document-convert-info",
  "api/rest-api-v-0-7/conversion/document-convert",
  "api/rest-api-v-0-7/conversion/document-convert-status",
  "api/rest-api-v-0-7/conversion/video-convert",
  "api/rest-api-v-0-7/conversion/video-convert-status",
  "api/url-api/file-information/file-info-json",
  "api/url-api/file-information/file-info-jsonp",
  "api/url-api/file-names/file-with-name",
]
`;

exports[`getNavigationRoot > uploadcare > gets navigation root for /api/url-api 1`] = `
{
  "apiDefinitionId": "6e1b77b7-26ce-4bba-9544-a24a9b3519dc",
  "availability": undefined,
  "changelog": undefined,
  "children": [
    {
      "apiDefinitionId": "6e1b77b7-26ce-4bba-9544-a24a9b3519dc",
      "availability": undefined,
      "children": [
        {
          "apiDefinitionId": "6e1b77b7-26ce-4bba-9544-a24a9b3519dc",
          "availability": undefined,
          "endpointId": "subpackage_fileInformation.fileInfoJson",
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.api.api.url-api.subpackage_fileInformation.subpackage_fileInformation.fileInfoJson",
          "isResponseStream": false,
          "method": "GET",
          "slug": "api/url-api/file-information/file-info-json",
          "title": "File info as JSON",
          "type": "endpoint",
        },
        {
          "apiDefinitionId": "6e1b77b7-26ce-4bba-9544-a24a9b3519dc",
          "availability": undefined,
          "endpointId": "subpackage_fileInformation.fileInfoJsonp",
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.api.api.url-api.subpackage_fileInformation.subpackage_fileInformation.fileInfoJsonp",
          "isResponseStream": false,
          "method": "GET",
          "slug": "api/url-api/file-information/file-info-jsonp",
          "title": "File info as application/javascript",
          "type": "endpoint",
        },
      ],
      "hidden": undefined,
      "icon": undefined,
      "id": "root.uv.api.api.url-api.subpackage_fileInformation",
      "overviewPageId": undefined,
      "pointsTo": "api/url-api/file-information/file-info-json",
      "slug": "api/url-api/file-information",
      "title": "File information",
      "type": "apiSection",
    },
    {
      "apiDefinitionId": "6e1b77b7-26ce-4bba-9544-a24a9b3519dc",
      "availability": undefined,
      "children": [
        {
          "apiDefinitionId": "6e1b77b7-26ce-4bba-9544-a24a9b3519dc",
          "availability": undefined,
          "endpointId": "subpackage_fileNames.fileWithName",
          "hidden": undefined,
          "icon": undefined,
          "id": "root.uv.api.api.url-api.subpackage_fileNames.subpackage_fileNames.fileWithName",
          "isResponseStream": false,
          "method": "GET",
          "slug": "api/url-api/file-names/file-with-name",
          "title": "File with a custom name",
          "type": "endpoint",
        },
      ],
      "hidden": undefined,
      "icon": undefined,
      "id": "root.uv.api.api.url-api.subpackage_fileNames",
      "overviewPageId": undefined,
      "pointsTo": "api/url-api/file-names/file-with-name",
      "slug": "api/url-api/file-names",
      "title": "File names",
      "type": "apiSection",
    },
  ],
  "disableLongScrolling": undefined,
  "hidden": undefined,
  "hideTitle": undefined,
  "icon": undefined,
  "id": "root.uv.api.api.url-api",
  "overviewPageId": undefined,
  "pointsTo": "api/url-api/file-information/file-info-json",
  "showErrors": true,
  "slug": "api/url-api",
  "title": "URL API",
  "type": "apiReference",
}
`;

exports[`getNavigationRoot > uploadcare > gets navigation root for /docs 1`] = `
{
  "child": {
    "children": [
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.introduction.intro",
            "pageId": "pages/index.mdx",
            "slug": "docs/introduction/intro",
            "title": "Overview",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.introduction.start/quickstart",
            "pageId": "pages/start/quickstart.mdx",
            "slug": "docs/introduction/start/quickstart",
            "title": "Quick start",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.introduction.security",
            "pageId": "pages/security/index.mdx",
            "slug": "docs/introduction/security",
            "title": "Security",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.introduction.billing",
            "pageId": "pages/billing.mdx",
            "slug": "docs/introduction/billing",
            "title": "Billing",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.docs.docs.introduction",
        "overviewPageId": undefined,
        "pointsTo": "docs/introduction/intro",
        "slug": "docs/introduction",
        "title": "Introduction",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.uploading.uploads",
            "pageId": "pages/uploads/index.mdx",
            "slug": "docs/uploading/uploads",
            "title": "Overview",
            "type": "page",
          },
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.uploading.uploading-files",
            "pageId": "pages/uploading-files/index.mdx",
            "slug": "docs/uploading/uploading-files",
            "title": "Uploading files",
            "type": "page",
          },
          {
            "children": [
              {
                "hidden": undefined,
                "icon": undefined,
                "id": "root.uv.docs.docs.uploading.file-uploader.file-uploader",
                "pageId": "pages/file-uploader/index.mdx",
                "slug": "docs/uploading/file-uploader/file-uploader",
                "title": "Overview",
                "type": "page",
              },
            ],
            "collapsed": false,
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.uploading.file-uploader",
            "overviewPageId": undefined,
            "pointsTo": "docs/uploading/file-uploader/file-uploader",
            "slug": "docs/uploading/file-uploader",
            "title": "File Uploader",
            "type": "section",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.docs.docs.uploading",
        "overviewPageId": undefined,
        "pointsTo": "docs/uploading/uploads",
        "slug": "docs/uploading",
        "title": "Uploading",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.optimization.image-optimization",
            "pageId": "pages/transformations/image/compression.mdx",
            "slug": "docs/optimization/image-optimization",
            "title": "Image optimization",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.docs.docs.optimization",
        "overviewPageId": undefined,
        "pointsTo": "docs/optimization/image-optimization",
        "slug": "docs/optimization",
        "title": "Optimization",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.image-transformations.overview",
            "pageId": "pages/transformations/image/index.mdx",
            "slug": "docs/image-transformations/overview",
            "title": "Overview",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.docs.docs.image-transformations",
        "overviewPageId": undefined,
        "pointsTo": "docs/image-transformations/overview",
        "slug": "docs/image-transformations",
        "title": "Image transformations",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.delivery.overview",
            "pageId": "pages/delivery/index.mdx",
            "slug": "docs/delivery/overview",
            "title": "Overview",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.docs.docs.delivery",
        "overviewPageId": undefined,
        "pointsTo": "docs/delivery/overview",
        "slug": "docs/delivery",
        "title": "Delivery",
        "type": "section",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs.docs.file-management.overview",
            "pageId": "pages/start/file-management.mdx",
            "slug": "docs/file-management/overview",
            "title": "Overview",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.docs.docs.file-management",
        "overviewPageId": undefined,
        "pointsTo": "docs/file-management/overview",
        "slug": "docs/file-management",
        "title": "File management",
        "type": "section",
      },
    ],
    "id": "root.uv.docs.docs",
    "type": "sidebarRoot",
  },
  "hidden": false,
  "icon": "puzzle",
  "id": "root.uv.docs",
  "pointsTo": "docs/introduction/intro",
  "slug": "docs",
  "title": "Guides",
  "type": "tab",
}
`;

exports[`getNavigationRoot > uploadcare > gets navigation root for /docs/file-management 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root.uv.docs.docs.file-management.overview",
      "pageId": "pages/start/file-management.mdx",
      "slug": "docs/file-management/overview",
      "title": "Overview",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.docs.docs.file-management",
  "overviewPageId": undefined,
  "pointsTo": "docs/file-management/overview",
  "slug": "docs/file-management",
  "title": "File management",
  "type": "section",
}
`;

exports[`getNavigationRoot > uploadcare > gets navigation root for /docs/file-management/overview 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.docs.docs.file-management.overview",
  "pageId": "pages/start/file-management.mdx",
  "slug": "docs/file-management/overview",
  "title": "Overview",
  "type": "page",
}
`;

exports[`getNavigationRoot > uploadcare > gets navigation root for /docs/integrations 1`] = `
{
  "child": {
    "children": [
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs/integrations.docs/integrations.all-integrations",
            "pageId": "pages/integrations/index.mdx",
            "slug": "docs/integrations/all-integrations",
            "title": "All integrations",
            "type": "page",
          },
        ],
        "id": "root.uv.docs/integrations.docs/integrations.group",
        "type": "sidebarGroup",
      },
      {
        "children": [
          {
            "hidden": undefined,
            "icon": undefined,
            "id": "root.uv.docs/integrations.docs/integrations.api-clients.python",
            "pageId": "pages/integrations/python.mdx",
            "slug": "docs/integrations/api-clients/python",
            "title": "Python",
            "type": "page",
          },
        ],
        "collapsed": false,
        "hidden": undefined,
        "icon": undefined,
        "id": "root.uv.docs/integrations.docs/integrations.api-clients",
        "overviewPageId": undefined,
        "pointsTo": "docs/integrations/api-clients/python",
        "slug": "docs/integrations/api-clients",
        "title": "API clients",
        "type": "section",
      },
    ],
    "id": "root.uv.docs/integrations.docs/integrations",
    "type": "sidebarRoot",
  },
  "hidden": false,
  "icon": "puzzle",
  "id": "root.uv.docs/integrations",
  "pointsTo": "docs/integrations/all-integrations",
  "slug": "docs/integrations",
  "title": "Integrations",
  "type": "tab",
}
`;

exports[`getNavigationRoot > uploadcare > gets navigation root for /docs/introduction 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root.uv.docs.docs.introduction.intro",
      "pageId": "pages/index.mdx",
      "slug": "docs/introduction/intro",
      "title": "Overview",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root.uv.docs.docs.introduction.start/quickstart",
      "pageId": "pages/start/quickstart.mdx",
      "slug": "docs/introduction/start/quickstart",
      "title": "Quick start",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root.uv.docs.docs.introduction.security",
      "pageId": "pages/security/index.mdx",
      "slug": "docs/introduction/security",
      "title": "Security",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root.uv.docs.docs.introduction.billing",
      "pageId": "pages/billing.mdx",
      "slug": "docs/introduction/billing",
      "title": "Billing",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.docs.docs.introduction",
  "overviewPageId": undefined,
  "pointsTo": "docs/introduction/intro",
  "slug": "docs/introduction",
  "title": "Introduction",
  "type": "section",
}
`;

exports[`getNavigationRoot > uploadcare > gets navigation root for /docs/introduction/intro 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.docs.docs.introduction.intro",
  "pageId": "pages/index.mdx",
  "slug": "docs/introduction/intro",
  "title": "Overview",
  "type": "page",
}
`;
